--- a/lets_run_park.ipynb
+++ b/lets_run_park.ipynb
@@ -1,19 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-19T00:08:54.188052Z",
-     "start_time": "2024-12-19T00:08:54.140029Z"
+     "end_time": "2024-12-19T02:20:01.674151Z",
+     "start_time": "2024-12-19T02:20:01.651041Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ],
+   "id": "initial_id",
    "outputs": [
     {
      "data": {
@@ -21,24 +22,24 @@
        "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 75
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T00:08:54.877531Z",
-     "start_time": "2024-12-19T00:08:54.851303Z"
+     "end_time": "2024-12-19T02:20:05.696062Z",
+     "start_time": "2024-12-19T02:20:04.196773Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.messages\n",
+    "#from langchain_core.messages import Humanmeesages\n",
     "prompt_template = ChatPromptTemplate([\n",
     "    ('system', \"\"\"You are a professional chatbot working at a horse racing track, providing detailed, helpful, and dynamic information based on the following sources:\n",
     "    Quick Information Access: Summarize key details such as race schedules, race types, and betting methods in an easy-to-understand way for beginners.\n",
@@ -63,17 +64,8 @@
     "output_parser = StrOutputParser()"
    ],
    "id": "29375b321eb48648",
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2568194066.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;36m  Cell \u001B[1;32mIn[76], line 2\u001B[1;36m\u001B[0m\n\u001B[1;33m    from langchain_core.messages\u001B[0m\n\u001B[1;37m                                ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "execution_count": 76
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -84,8 +76,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T00:10:14.860278Z",
-     "start_time": "2024-12-19T00:08:55.933879Z"
+     "end_time": "2024-12-19T02:21:43.964570Z",
+     "start_time": "2024-12-19T02:20:35.269354Z"
     }
    },
    "cell_type": "code",
@@ -96,7 +88,7 @@
     "import os\n",
     "\n",
     "# 여러 PDF 파일 경로를 리스트로 생성\n",
-    "pdf_folder = 'C:/Workspaces/dl_nlp/Choisoovin/10_langchain/04_ai_Sommelier_rag/pdfs'\n",
+    "pdf_folder = 'C:/Workspaces/project_ma/pdfs'\n",
     "pdf_files = [os.path.join(pdf_folder, file) for file in os.listdir(pdf_folder) if file.endswith('.pdf')]\n",
     "\n",
     "# 각 PDF 파일을 로드하여 문서로 처리\n",
@@ -117,97 +109,117 @@
      ]
     }
    ],
-   "execution_count": 77
+   "execution_count": 4
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## CSV 파일 로드",
-   "id": "b77b5492d9f73f47"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "import os\n",
-    "from langchain_community.document_loaders import CSVLoader\n",
-    "\n",
-    "# CSV 저장된 폴더 경로 지정\n",
-    "csv_folder = 'C:/Workspaces/dl_nlp/Choisoovin/10_langchain/04_ai_Sommelier_rag/csvs'\n",
-    "\n",
-    "# 폴더 내 모든 CSV 파일 경로 리스트 생성\n",
-    "csv_files = [os.path.join(csv_folder, file) for file in os.listdir(csv_folder) if file.endswith('.csv')]\n",
-    "\n",
-    "# 폴더 내 모든 CSV 파일을 Document 객체로 로드\n",
-    "csv_documents = []\n",
-    "for csv_file in csv_files:\n",
-    "    loader = CSVLoader(file_path=csv_file)  \n",
-    "    csv_documents.extend(loader.load())    \n"
-   ],
-   "id": "967b4e69213bd1bf"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "## web 방식",
-   "id": "36e9d63056bcc62"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "from langchain.document_loaders import WebBaseLoader\n",
-    "\n",
-    "# 조회하고 싶은 URL들의 리스트\n",
-    "urls = [\n",
-    "    \"http://www.okrace.co.kr/okrace_guide/race_guide1.php\",\n",
-    "    \"http://www.okrace.co.kr/okrace_guide/race_guide2.php\",\n",
-    "    \"http://www.okrace.co.kr/okrace_guide/race_guide9.php\"\n",
-    "]\n",
-    "\n",
-    "# WebBaseLoader에 리스트 전달\n",
-    "loader = WebBaseLoader(urls)\n",
-    "\n",
-    "# 로드된 문서 가져오기\n",
-    "web_documents = loader.load()\n",
-    "\n",
-    "# 출력 확인\n",
-    "len(web_documents)"
-   ],
-   "id": "56fa7fc69bf7fbf4"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "web_documents[1]",
-   "id": "687f83627c19c0e"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "## 데이터 병합",
-   "id": "4fb06c4f076d3931"
+   "source": "## XML 파일 로드",
+   "id": "5ca06f9a03e03062"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T00:11:32.819422Z",
-     "start_time": "2024-12-19T00:11:32.134182Z"
+     "end_time": "2024-12-19T02:49:00.331834Z",
+     "start_time": "2024-12-19T02:49:00.150113Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "from langchain_community.document_loaders import UnstructuredXMLLoader\n",
+    "import os\n",
+    "# 여러 xml 파일 경로를 리스트로 생성\n",
+    "xml_folder = 'C:/Workspaces/project_ma/xmls'\n",
+    "xml_files = [os.path.join(xml_folder, file) for file in os.listdir(xml_folder) if file.endswith('.xml')]\n",
+    "\n",
+    "# xml 파일들 로드\n",
+    "xml_documents = []\n",
+    "for xml_file in xml_files:\n",
+    "    loader = UnstructuredXMLLoader(xml_file)\n",
+    "    xml_documents.extend(loader.load())  # 문서를 리스트에 추가\n",
+    "\n",
+    "print(f\"Loaded {len(xml_documents)} documents.\")"
+   ],
+   "id": "90389e0f6dfcfff3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 1 documents.\n"
+     ]
+    }
+   ],
+   "execution_count": 34
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-19T03:34:33.405252Z",
+     "start_time": "2024-12-19T03:34:33.399190Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "type(xml_documents)",
+   "id": "a428588698f16858",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "langchain_core.documents.base.Document"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 47
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-19T03:34:41.001615Z",
+     "start_time": "2024-12-19T03:34:40.950636Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "xml_documents[0].replace('\\n', ' ')\n",
+   "id": "b8b864cd115830d3",
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'replace'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[48], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mxml_documents\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreplace\u001B[49m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m \u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'list' object has no attribute 'replace'"
+     ]
+    }
+   ],
+   "execution_count": 48
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 데이터 병합 + 임베딩 모델 호출",
+   "id": "3d57201bf114f0e1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "from langchain_openai import OpenAIEmbeddings\n",
     "\n",
-    "\n",
     "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n",
-    "docs = [document.page_content for document in pdf_documents]\n",
     "\n",
-    "all_documents = pdf_documents #+ web_documents"
+    "all_documents = pdf_documents + xml_documents"
    ],
-   "id": "2809e4a68ef0a62f",
-   "outputs": [],
-   "execution_count": 81
+   "id": "94c5cf7e31de3a38"
   },
   {
    "metadata": {},
@@ -218,8 +230,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T00:37:35.942424Z",
-     "start_time": "2024-12-19T00:37:27.774348Z"
+     "end_time": "2024-12-19T02:49:47.121320Z",
+     "start_time": "2024-12-19T02:49:42.762663Z"
     }
    },
    "cell_type": "code",
@@ -234,15 +246,15 @@
     {
      "data": {
       "text/plain": [
-       "<langchain_community.vectorstores.faiss.FAISS at 0x23df9ad6540>"
+       "<langchain_community.vectorstores.faiss.FAISS at 0x12a47c545c0>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 87
+   "execution_count": 36
   },
   {
    "metadata": {},
@@ -253,8 +265,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T00:37:40.671145Z",
-     "start_time": "2024-12-19T00:37:40.659778Z"
+     "end_time": "2024-12-19T02:49:50.305033Z",
+     "start_time": "2024-12-19T02:49:50.297230Z"
     }
    },
    "cell_type": "code",
@@ -267,21 +279,21 @@
     {
      "data": {
       "text/plain": [
-       "VectorStoreRetriever(tags=['FAISS', 'OpenAIEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x0000023DF9AD6540>, search_kwargs={})"
+       "VectorStoreRetriever(tags=['FAISS', 'OpenAIEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x0000012A47C545C0>, search_kwargs={})"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 88
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T00:38:45.402494Z",
-     "start_time": "2024-12-19T00:38:42.556652Z"
+     "end_time": "2024-12-19T02:49:53.057344Z",
+     "start_time": "2024-12-19T02:49:50.824629Z"
     }
    },
    "cell_type": "code",
@@ -303,7 +315,7 @@
     ")\n",
     "\n",
     "#llm 질의\n",
-    "response1 = rtvr_qa.invoke('auto bet에 대해 알려줘')\n",
+    "response1 = rtvr_qa.invoke('2024년 12월 20일 부경 경마장 경기에 대해 알려줘')\n",
     "print(response1)"
    ],
    "id": "c342874c316efeb",
@@ -312,17 +324,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'query': 'auto bet에 대해 알려줘', 'result': '죄송하지만, 제공된 정보에는 \"auto bet\"에 대한 구체적인 내용이 포함되어 있지 않습니다. \"auto bet\"에 대한 정보를 원하신다면, 관련된 다른 자료나 웹사이트를 참고하시기 바랍니다.'}\n"
+      "{'query': '2024년 12월 20일 부경 경마장 경기에 대해 알려줘', 'result': '2024년 12월 20일은 경마 시행 계획에 따르면 부경 경마장에서 경기가 열리지 않는 날입니다. 12월 20일은 금요일로, 부경 경마장은 금요일에 경기를 시행하지 않습니다.'}\n"
      ]
     }
    ],
-   "execution_count": 91
+   "execution_count": 38
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-19T02:44:24.548064Z",
+     "start_time": "2024-12-19T02:44:24.543341Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "#response1 = rtvr_qa.invoke('오토벳에 대해 알려줘')\n",
     "#print(response1)\n",
@@ -331,15 +346,17 @@
     "#민하님께서 guide.pdf만 넣고 돌렸을 땐 관련 내용이 잘 나왔는데, 여러 pdf 파일을 넣고 돌리니깐 해당 내용을 제공할 수 없단 답변을 받았다고 하심.\n",
     "#이에 다 같이 돌려봤으나 똑같은 증상을 겪었다."
    ],
-   "id": "2ba39f0253b1570"
+   "id": "2ba39f0253b1570",
+   "outputs": [],
+   "execution_count": 28
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "13956d1f70ea6dcf"
+   "id": "13956d1f70ea6dcf",
+   "execution_count": null
   }
  ],
  "metadata": {
