--- a/main/category_ma_copy.ipynb
+++ b/main/category_ma_copy.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T18:51:59.806393Z",
-     "start_time": "2024-12-19T18:51:59.797585Z"
+     "end_time": "2024-12-20T02:10:37.718480Z",
+     "start_time": "2024-12-20T02:10:37.685073Z"
     }
    },
    "cell_type": "code",
@@ -20,12 +20,12 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -33,8 +33,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-19T19:12:14.992764Z",
-     "start_time": "2024-12-19T19:12:14.217307Z"
+     "end_time": "2024-12-20T02:14:09.740219Z",
+     "start_time": "2024-12-20T02:14:08.408691Z"
     }
    },
    "source": [
@@ -55,28 +55,6 @@
     "    temperature=0\n",
     ")\n",
     "\n",
-    "def classify_question(query):\n",
-    "    # 프롬프트 생성\n",
-    "    prompt = ChatPromptTemplate.from_messages([\n",
-    "    SystemMessage(content=\"\"\"\\\n",
-    "    You are an expert in horse racing. Your task is to classify the given user question into one of the following categories:\n",
-    "    \n",
-    "    - 경마정보: Questions about general information such as rules, betting methods, and terminology.\n",
-    "    - 경주일정: Questions about race schedules, dates, times, or locations. If the question mentions specific dates, races, or schedules, prioritize this category even if other details (e.g., horse performance) are included.\n",
-    "    - 우승마기록: Questions about winning horses and their records.\n",
-    "    - 경주마정보: Questions about specific horses, their participation counts, rankings, or performance metrics.\n",
-    "\n",
-    "    If the question does not match any category, return \"Unknown\".\n",
-    "    \"\"\"),\n",
-    "    HumanMessage(content=f\"User Question: {query}\\n\\nClassify this question into one of the categories:\")\n",
-    "])\n",
-    "\n",
-    "    output_parser = StrOutputParser()\n",
-    "    chain = prompt | model | output_parser\n",
-    "    response = chain.invoke({})\n",
-    "    \n",
-    "    return response.strip('-')\n",
-    "\n",
     "vectorstore_paths = {\n",
     "    \"경마정보\": r\"C:\\Workspace\\DA36_mini4_ma\\min\\vectors_new\\vs_race_guide\",\n",
     "    \"경주일정\": r\"C:\\Workspace\\DA36_mini4_ma\\min\\vectors_new\\vs_schedule\",\n",
@@ -89,15 +67,38 @@
     "        return False, query  \n",
     "\n",
     "    prompt = ChatPromptTemplate.from_messages([\n",
-    "        SystemMessage(content=\"You are an assistant that summarizes questions into concise queries for search.\"),\n",
+    "        SystemMessage(content=\"You are an assistant that summarizes questions to korean into concise queries for search.\"),\n",
     "        HumanMessage(content=f\"Original question: {query}\\n\\nSummarize this into a concise query:\")\n",
     "    ])\n",
     "    summarized_query = (prompt | model | StrOutputParser()).invoke({\"query\": query})\n",
-    "    print(\"⚠️질문이 20단어를 초과하여 요약되었습니다.\")\n",
     "    return True, summarized_query \n",
     "\n",
+    "\n",
+    "def classify_and_summarize_query(query):\n",
+    "    is_summarized, processed_query = summarize_query(query)\n",
+    "    prompt = ChatPromptTemplate.from_messages([\n",
+    "        SystemMessage(content=\"\"\"\\\n",
+    "        You are an expert in horse racing. Your task is to classify the given user question into one of the following categories:\n",
+    "\n",
+    "        - 경마정보: Questions about general information such as rules, betting methods, and terminology.\n",
+    "        - 경주일정: Questions about race schedules, dates, times, or locations. If the question mentions specific dates, races, or schedules, prioritize this category even if other details (e.g., horse performance) are included.\n",
+    "        - 우승마기록: Questions about winning horses and their records.\n",
+    "        - 경주마정보: Questions about specific horses, their participation counts, rankings, or performance metrics.\n",
+    "\n",
+    "        If the question does not match any category, return \"Unknown\".\n",
+    "        \"\"\"),\n",
+    "        HumanMessage(content=f\"User Question: {processed_query}\\n\\nClassify this question into one of the categories:\")\n",
+    "    ])\n",
+    "    \n",
+    "    output_parser = StrOutputParser()\n",
+    "    chain = prompt | model | output_parser\n",
+    "    category = chain.invoke({\"query\": processed_query}).strip()\n",
+    "\n",
+    "    return category\n",
+    "\n",
+    "\n",
     "def rag_and_prompt(query):\n",
-    "    category = classify_question(query)\n",
+    "    category = classify_and_summarize_query(query)\n",
     "    \n",
     "    vectorstore_path = vectorstore_paths[category]\n",
     "    embeddings = OpenAIEmbeddings(model=\"text-embedding-ada-002\")\n",
@@ -106,6 +107,7 @@
     "\n",
     "    is_summarized, summarized_query = summarize_query(query)  # 요약 수행\n",
     "    if is_summarized:\n",
+    "        print(\"⚠️질문이 20단어를 초과하여 요약되었습니다.\")\n",
     "        print(f\"- 기존 질문: {query}\\n- 요약된 질문: {summarized_query}\\n\")\n",
     "    else:\n",
     "        print(f\"질문: {query}\\n\")\n",
@@ -134,16 +136,16 @@
     "\n",
     "def ask_question(query):\n",
     "    response = rag_and_prompt(query)\n",
-    "    return response"
+    "    return response\n"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T19:12:23.339141Z",
-     "start_time": "2024-12-19T19:12:18.074197Z"
+     "end_time": "2024-12-20T02:10:50.281484Z",
+     "start_time": "2024-12-20T02:10:42.420614Z"
     }
    },
    "cell_type": "code",
@@ -154,24 +156,32 @@
    "id": "f1a2fadc685330f5",
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\playdata2\\AppData\\Local\\Temp\\ipykernel_13320\\944863228.py:112: LangChainDeprecationWarning: The method `BaseRetriever.get_relevant_documents` was deprecated in langchain-core 0.1.46 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  results = retriever.get_relevant_documents(query)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "질문: 나 이번에 경마장을 처음 가는데, 배팅을 어떻게 하는지 모르겠어. 하나의 말에만 배팅해야 하는 건가? 아니면 두마리? 순위까지 맞혀야 하는 거야?\n",
+      "경마장에서 배팅을 처음 하신다니, 정말 흥미진진한 경험이 될 거예요! 경마 배팅은 다양한 방식으로 즐길 수 있는데요, 초보자라면 단승식이나 연승식을 추천드려요. 단승식은 1등으로 도착할 말을 맞추는 방식이고, 연승식은 1, 2, 3등 안에 들어올 말을 맞추는 방식이에요. \n",
       "\n",
-      "경마장에서 배팅을 처음 하신다니 정말 흥미진진한 경험이 되실 거예요! 경마 배팅은 다양한 방식으로 즐길 수 있는데요, 초보자라면 단승식이나 연승식을 추천드려요. 단승식은 1등으로 도착할 말을 맞추는 방식이고, 연승식은 1, 2, 3등 안에 들어올 말 중 하나를 맞추는 방식이에요. 적중률이 높고 환급률도 괜찮아서 처음 시작하기에 좋답니다.\n",
+      "하나의 말에만 배팅할 수도 있고, 여러 마리에 배팅할 수도 있어요. 예를 들어, 복승식은 1등과 2등으로 들어올 말을 순서에 상관없이 맞추는 방식이고, 쌍승식은 1등과 2등을 순서대로 맞추는 방식이에요. \n",
       "\n",
-      "만약 조금 더 도전해보고 싶으시다면, 복승식이나 쌍승식도 고려해보세요. 복승식은 1등과 2등으로 들어올 말을 순서에 상관없이 맞추는 방식이고, 쌍승식은 순서대로 맞추는 방식이에요. 각각의 방식에 따라 배당률이 다르니, 어떤 방식이 자신에게 맞는지 고민해보세요. 그리고 마권을 구매할 때는 경주번호, 승식, 금액, 그리고 선택하고 싶은 말을 잘 선택하셔야 해요. 즐거운 경마 경험 되시길 바랄게요! 🏇💨\n"
+      "배팅을 하실 때는 경주번호, 승식, 그리고 선택하고 싶은 말을 정하고, 구입하고 싶은 금액을 정하면 됩니다. 적중하면 배당률에 따라 환급받을 수 있으니, 배당률도 잘 확인해 보세요. 즐거운 경마 경험 되시길 바랄게요! 🏇💨\n"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T19:12:34.116088Z",
-     "start_time": "2024-12-19T19:12:28.165020Z"
+     "end_time": "2024-12-20T02:14:17.932952Z",
+     "start_time": "2024-12-20T02:14:10.917447Z"
     }
    },
    "cell_type": "code",
@@ -187,24 +197,19 @@
      "text": [
       "⚠️질문이 20단어를 초과하여 요약되었습니다.\n",
       "- 기존 질문: 나 이번에 경마장을 처음 가는데, 배팅을 어떻게 하는지 모르겠어. 하나의 말에만 배팅해야 하는 건가? 아니면 두마리? 순위까지 맞혀야 하는 거야? 흠 어려워\n",
-      "- 요약된 질문: 경마장에서 배팅하는 방법과 규칙은 무엇인가요?\n",
+      "- 요약된 질문: 경마장에서 배팅 방법과 규칙은?\n",
       "\n",
-      "경마장에서 배팅을 처음 하신다니, 정말 흥미진진한 경험이 될 거예요! 경마 배팅은 다양한 방식으로 즐길 수 있는데요, 초보자라면 단승식이나 연승식을 추천드려요. \n",
-      "\n",
-      "- **단승식**: 1등으로 도착할 말을 맞추는 방식이에요. 예를 들어, 7번 말을 선택해서 그 말이 1등으로 들어오면 적중입니다.\n",
-      "- **연승식**: 1, 2, 3등 안에 들어올 말 중 하나를 맞추는 방식이에요. 출주마가 7두 이하인 경우에는 1, 2등 안에 들어와야 적중이 됩니다.\n",
-      "\n",
-      "이 외에도 여러 마리의 말을 조합해서 맞추는 복승식, 쌍승식, 삼복승식 등 다양한 배팅 방식이 있어요. 각 방식마다 적중률과 환급률이 다르니, 처음에는 단순한 방식으로 시작해보세요. 그리고 배당률을 참고하면 다른 사람들이 어떤 말을 우승마로 예측하고 있는지도 알 수 있으니, 이를 참고하는 것도 좋은 방법입니다. 즐거운 경마 경험 되세요! 🏇💨\n"
+      "경마 배팅은 다양한 방식으로 즐길 수 있어요! 초보자라면 단승식이나 연승식을 추천드려요. 단승식은 1등으로 도착할 말을 맞추는 방식이고, 연승식은 1, 2, 3등 안에 들어올 말 중 하나를 맞추는 방식이에요. 두 마리 이상의 말을 선택하고 싶다면 복승식이나 쌍승식도 있어요. 복승식은 1등과 2등 말을 순서에 상관없이 맞추는 방식이고, 쌍승식은 순서대로 맞추는 방식이죠. 다양한 승식이 있으니, 자신에게 맞는 방식을 선택해보세요! 배당률에 따라 환급도 받을 수 있으니, 다른 고객들의 배팅 상황도 참고해보세요. 즐거운 경마 경험 되시길 바랄게요! 🏇💨\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T19:12:44.201045Z",
-     "start_time": "2024-12-19T19:12:35.363876Z"
+     "end_time": "2024-12-20T02:14:40.281282Z",
+     "start_time": "2024-12-20T02:14:26.999625Z"
     }
    },
    "cell_type": "code",
@@ -220,29 +225,33 @@
      "text": [
       "⚠️질문이 20단어를 초과하여 요약되었습니다.\n",
       "- 기존 질문: 나 12월 22일에 경마장을 처음 가서 잘 모르는데, 여러 마리의 말한테 배팅할 수 있는 거야? 나 그 날 3시 이후에 가는데 말들 경주력을 분석해주라\n",
-      "- 요약된 질문: Can I bet on multiple horses at the racetrack on December 22, and can you analyze the horses' performance for races after 3 PM?\n",
+      "- 요약된 질문: 12월 22일 경마장 방문 시 여러 마리 말에 배팅 가능 여부 및 3시 이후 경주력 분석 방법?\n",
       "\n",
-      "경마장에 처음 가신다니 정말 흥미진진한 경험이 되실 거예요! 12월 22일에 여러 마리의 말에 배팅할 수 있는지 궁금하시군요. 네, 경마에서는 여러 마리의 말에 배팅할 수 있습니다. 이를 '복수 배팅'이라고 하며, 다양한 배팅 방식이 있어 전략적으로 접근할 수 있습니다.\n",
+      "경마장에 처음 가신다니 정말 흥미진진한 경험이 되실 거예요! 12월 22일에 서울 경마공원에서 열리는 경주에 대해 알려드릴게요. 그날 3시 이후에 열리는 2경주는 국6 등급의 1300m 경주입니다. 여러 마리의 말에 배팅할 수 있는지 궁금하시죠? 네, 여러 마리의 말에 배팅할 수 있습니다. 이를 '복수 배팅'이라고 하며, 다양한 배팅 방식이 있으니 경마장에 가셔서 자세히 알아보세요.\n",
       "\n",
-      "이제 12월 22일 3시 이후에 열리는 경주에 대해 분석해드릴게요. 10경주 혼4 1600 핸디캡 경주가 예정되어 있습니다. 이 경주에서 주목할 만한 말들을 살펴보면:\n",
+      "이제 경주력 분석을 해드릴게요. 최근 성적이 좋은 말들을 살펴보면:\n",
       "\n",
-      "1. **호크프린스**: 최근 경주에서 꾸준히 상위권에 머물고 있으며, 11월 24일 경주에서 5위를 기록했습니다. 경주력 예상은 1:42.0으로, 좋은 성적을 기대할 수 있습니다.\n",
+      "1. **그랜드플라잉**: 최근 11월 30일 경주에서 9위를 기록했지만, 이전 능검에서는 6위를 기록하며 꾸준한 성적을 보이고 있습니다.\n",
+      "   \n",
+      "2. **이스트스카이**: 11월 24일 경주에서 7위를 기록했으며, 9월 1일 경주에서는 5위를 기록했습니다. 최근 성적이 조금 아쉽지만, 잠재력이 있는 말입니다.\n",
       "\n",
-      "2. **브리도시리스**: 11월 24일 경주에서 4위를 기록하며 좋은 성적을 보였습니다. 경주력 예상은 1:43.8로, 주목할 만한 말입니다.\n",
+      "3. **세명고스트**: 11월 23일 경주에서 6위를 기록했으며, 이전 능검에서는 2위를 기록했습니다. 경주력이 점점 나아지고 있는 말입니다.\n",
       "\n",
-      "3. **달금**: 10월 19일 경주에서 4위를 기록하며 안정적인 성적을 보이고 있습니다. 경주력 예상은 1:43.6입니다.\n",
+      "4. **베아트리스**: 10월 5일 경주에서 8위를 기록했지만, 이전 경주에서는 5위를 기록하며 안정적인 성적을 보이고 있습니다.\n",
       "\n",
-      "이 외에도 다른 말들의 최근 성적과 경주력을 참고하여 배팅 전략을 세우시면 좋을 것 같습니다. 경마는 예측이 어려운 스포츠이니, 다양한 정보를 참고하여 신중하게 배팅하시길 바랍니다. 즐거운 경마 관람 되세요! 🏇🎉\n"
+      "5. **럭키페이머스**: 11월 10일 경주에서 10위를 기록했지만, 10월 6일 경주에서는 6위를 기록했습니다. 최근 성적이 조금 아쉽지만, 주목할 만한 말입니다.\n",
+      "\n",
+      "이 외에도 다른 말들의 경주력을 참고하여 배팅 전략을 세우시면 좋을 것 같습니다. 경마장에서 즐거운 시간 보내세요! 🏇🎉\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T19:21:05.543771Z",
-     "start_time": "2024-12-19T19:20:52.293251Z"
+     "end_time": "2024-12-20T02:15:07.087879Z",
+     "start_time": "2024-12-20T02:14:54.608475Z"
     }
    },
    "cell_type": "code",
@@ -255,19 +264,19 @@
      "text": [
       "⚠️질문이 20단어를 초과하여 요약되었습니다.\n",
       "- 기존 질문: 나 경마장을 처음 가는데, 마권 구매 방법에 대해 알려줘. 그리고 어떤 말에 배팅해야 할지 모르겠는데 로또처럼 자동으로 배팅하는 건 안될까? 제발 알려줘~\n",
-      "- 요약된 질문: 경마장에서 마권 구매 방법과 자동 배팅 옵션이 있는지 알려줘.\n",
+      "- 요약된 질문: 경마장 마권 구매 방법과 자동 배팅 가능 여부\n",
       "\n",
-      "경마장에 처음 가신다니 정말 신나는 경험이 될 거예요! 마권 구매 방법에 대해 설명해 드릴게요. 경마는 다양한 승식으로 즐길 수 있는데, 초보자라면 단승식이나 연승식을 추천드려요. 단승식은 1등으로 도착할 말을 맞추는 방식이고, 연승식은 1, 2, 3등 안에 들어올 말을 맞추는 방식이에요.\n",
+      "경마장을 처음 방문하신다니 정말 신나는 경험이 될 거예요! 마권 구매 방법과 자동 배팅에 대해 알려드릴게요.\n",
       "\n",
-      "마권을 구매하려면 먼저 경주번호를 선택하고, 승식을 선택한 후, 구입하고 싶은 금액을 정하면 됩니다. 예를 들어, 부산경남경마공원 1경주에서 단승식으로 7번 말을 2천 원에 구입할 수 있어요.\n",
+      "먼저, 마권 구매 방법입니다. 경마는 다양한 승식으로 즐길 수 있는데, 초보자에게는 단승식이나 연승식이 적중률과 환급률이 높아 추천됩니다. 마권 구매표에 경주번호, 승식, 구입 금액, 선택하고 싶은 말을 기입하면 됩니다. 예를 들어, 부산경남경마공원 1경주에서 단승식으로 7번 말을 2천 원에 구입할 수 있습니다.\n",
       "\n",
-      "그리고 자동으로 배팅하는 방법도 있어요! '오토벳(Auto Bet)'이라는 기능을 이용하면 로또처럼 자동으로 배팅할 수 있답니다. 구매 시점 기준으로 단승식 저배당 5위 내에서 임의로 선택해 주는 방식이에요. 구매표에서 '마번' 대신 '자동(A)' 칸에 체크하면 됩니다.\n",
+      "그리고 자동으로 배팅하는 방법도 있어요! '오토벳(Auto Bet)'이라는 기능을 이용하면 로또처럼 자동으로 배팅할 수 있습니다. 이 기능은 단승식 저배당 5위 내에서 임의로 선택해주는 방식입니다. 구매표에서 '마번' 대신 '자동(A)' 칸에 체크하고 금액을 입력하면 됩니다.\n",
       "\n",
-      "말을 선택할 때는 예시장에서 말의 상태를 관찰하는 것도 좋은 방법이에요. 말의 눈빛, 털의 윤기, 땀의 양 등을 살펴보면 우승마를 예측하는 데 도움이 될 수 있답니다. 즐거운 경마 경험 되세요! 🐎🎉\n"
+      "이제 경마장에서 즐거운 시간을 보내세요! 🏇💨\n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 12
   },
   {
    "metadata": {
